tests/snapshots/templates_test__credentials_snapshot.snap
---
source: tests/templates_test.rs
assertion_line: 112
expression: "render(&CredentialsTemplate\n{\n    generated: \"2026-08-07\", fqdn: \"tracker.example.com\", owner: \"admin\",\n    owner_email: \"admin@tracker.example.com\", owner_password: \"ownerpass\",\n    db_name: \"unit3d\", db_user: \"unit3d\", db_pass: \"dbpass\", db_root_pass:\n    \"rootpass\", meilisearch_key: \"masterkey\", install_dir: \"/var/www/unit3d\",\n    php_version: \"8.5\", web_user: \"www-data\",\n})"
---
===============================================================================
UNIT3D Installation Credentials
Generated: 2026-08-07
===============================================================================

URL: https://tracker.example.com

OWNER LOGIN:
  Username: admin
  Email:    admin@tracker.example.com
  Password: ownerpass

DATABASE:
  Root Password: rootpass
  Name:          unit3d
  User:          unit3d
  Password:      dbpass

MEILISEARCH:
  Master Key: masterkey

INSTALLATION PATH: /var/www/unit3d
PHP VERSION:       8.5

IMPORTANT FILES:
  .env:       /var/www/unit3d/.env
  Nginx:      /etc/nginx/sites-available/tracker.example.com
  Supervisor: /etc/supervisor/conf.d/unit3d.conf
  Echo:       /var/www/unit3d/laravel-echo-server.json

USEFUL COMMANDS:
  Restart PHP-FPM:  systemctl restart php8.5-fpm
  Restart Nginx:    systemctl restart nginx
  Restart Workers:  supervisorctl restart all
  Clear Cache:      cd /var/www/unit3d && sudo -u www-data php artisan optimize:clear

===============================================================================
KEEP THIS FILE SECURE AND DELETE AFTER SAVING CREDENTIALS!
===============================================================================
