tests/snapshots/templates_test__credentials_snapshot_http_variant.snap
---
source: tests/templates_test.rs
expression: "render(&CredentialsTemplate\n{\n    generated: \"2026-08-07T00:00:00Z\", fqdn: \"sub.example.com\", owner:\n    \"owner\", owner_email: \"owner@example.com\", owner_password: \"opass\",\n    db_name: \"unit3d\", db_user: \"unit3d\", db_pass: \"dpass\", db_root_pass:\n    \"rpass\", meilisearch_key: \"mkey\", install_dir: \"/srv/unit3d\", php_version:\n    \"8.5\", web_user: \"ubuntu\",\n})"
---
===============================================================================
UNIT3D Installation Credentials
Generated: 2026-08-07T00:00:00Z
===============================================================================

URL: https://sub.example.com

OWNER LOGIN:
  Username: owner
  Email:    owner@example.com
  Password: opass

DATABASE:
  Root Password: rpass
  Name:          unit3d
  User:          unit3d
  Password:      dpass

MEILISEARCH:
  Master Key: mkey

INSTALLATION PATH: /srv/unit3d
PHP VERSION:       8.5

IMPORTANT FILES:
  .env:       /srv/unit3d/.env
  Nginx:      /etc/nginx/sites-available/sub.example.com
  Supervisor: /etc/supervisor/conf.d/unit3d.conf
  Echo:       /srv/unit3d/laravel-echo-server.json

USEFUL COMMANDS:
  Restart PHP-FPM:  systemctl restart php8.5-fpm
  Restart Nginx:    systemctl restart nginx
  Restart Workers:  supervisorctl restart all
  Clear Cache:      cd /srv/unit3d && sudo -u ubuntu php artisan optimize:clear

===============================================================================
KEEP THIS FILE SECURE AND DELETE AFTER SAVING CREDENTIALS!
===============================================================================
