tests/snapshots/templates_test__echo_server_snapshot.snap
---
source: tests/templates_test.rs
assertion_line: 90
expression: "render(&EchoServerTemplate\n{\n    protocol: \"https\", fqdn: \"tracker.example.com\", port: 8443, ssl_cert:\n    \"/etc/letsencrypt/live/tracker.example.com/fullchain.pem\", ssl_key:\n    \"/etc/letsencrypt/live/tracker.example.com/privkey.pem\", ssl_chain:\n    \"/etc/letsencrypt/live/tracker.example.com/chain.pem\",\n})"
---
{
    "authHost": "https://tracker.example.com",
    "authEndpoint": "/broadcasting/auth",
    "clients": [],
    "database": "redis",
    "databaseConfig": {
        "redis": {
            "host": "127.0.0.1",
            "port": 6379
        },
        "sqlite": {
            "databasePath": "/database/laravel-echo-server.sqlite"
        }
    },
    "devMode": false,
    "host": "127.0.0.1",
    "port": 8443,
    "protocol": "https",
    "socketio": {},
    "sslCertPath": "/etc/letsencrypt/live/tracker.example.com/fullchain.pem",
    "sslKeyPath": "/etc/letsencrypt/live/tracker.example.com/privkey.pem",
    "sslCertChainPath": "/etc/letsencrypt/live/tracker.example.com/chain.pem",
    "sslPassphrase": "",
    "subscribers": {
        "http": true,
        "redis": true
    },
    "apiOriginAllow": {
        "allowCors": true,
        "allowOrigin": "https://tracker.example.com",
        "allowMethods": "GET, POST",
        "allowHeaders": "Origin, Content-Type, X-Auth-Token, X-Requested-With, Accept, Authorization, X-CSRF-TOKEN, X-Socket-Id"
    }
}
