tests/snapshots/templates_test__env_snapshot_postgres_no_socket.snap
---
source: tests/templates_test.rs
expression: "render(&EnvTemplate\n{\n    protocol: \"http\", fqdn: \"tracker.example.com\", db_driver: \"pgsql\", db:\n    \"unit3d\", dbuser: \"unit3d\", dbpass: \"secret\", socket: \"\", owner: \"admin\",\n    owner_email: \"admin@tracker.example.com\", owner_password: \"ownerpass\",\n    tmdb_key: \"\", mail_driver: \"smtp\", mail_host: \"smtp.gmail.com\", mail_port:\n    \"587\", mail_username: \"user@example.com\", mail_password: \"mailpass\",\n    mail_from_name: \"UNIT3D\", meilisearch_key: \"masterkey\", redis_host:\n    \"/var/run/redis/redis.sock\", redis_port: \"-1\",\n})"
---
APP_ENV=prod
APP_KEY=
APP_DEBUG=false
APP_URL=http://tracker.example.com
VITE_ECHO_ADDRESS=http://tracker.example.com:8443

LOG_CHANNEL=daily
LOG_LEVEL=info

DB_CONNECTION=pgsql
DB_HOST=127.0.0.1
DB_PORT=3306
DB_DATABASE=unit3d
DB_USERNAME=unit3d
DB_PASSWORD=secret
DB_SOCKET=

BROADCAST_CONNECTION=redis
CACHE_STORE=redis
QUEUE_CONNECTION=redis

SESSION_DRIVER=redis
SESSION_CONNECTION=session
SESSION_LIFETIME=120
SESSION_SECURE_COOKIE=true

REDIS_HOST=/var/run/redis/redis.sock
REDIS_PASSWORD=null
REDIS_PORT=-1
REDIS_SCHEME=unix

MAIL_DRIVER=smtp
MAIL_HOST=smtp.gmail.com
MAIL_PORT=587
MAIL_USERNAME=user@example.com
MAIL_PASSWORD=mailpass
MAIL_ENCRYPTION=TLS
MAIL_FROM_NAME=UNIT3D
MAIL_FROM_ADDRESS=admin@tracker.example.com

DEFAULT_OWNER_NAME=admin
DEFAULT_OWNER_EMAIL=admin@tracker.example.com
DEFAULT_OWNER_PASSWORD=ownerpass

TMDB_API_KEY=
TWITCH_CLIENT_ID=
TWITCH_CLIENT_SECRET=

TRACKER_KEY=
TRACKER_HOST=127.0.0.1
TRACKER_PORT=6969
SCOUT_DRIVER=meilisearch
MEILISEARCH_HOST=http://127.0.0.1:7700
MEILISEARCH_KEY=masterkey
