tests/snapshots/templates_test__intro_snapshot.snap
---
source: tests/templates_test.rs
expression: render(&IntroTemplate)
---
__  __ _   __ ____ ______ _____  ____          ______                                            _  __                 ______     __ _  __   _
   / / / // | / //  _//_  __/|__  / / __ \        / ____/____   ____ ___   ____ ___   __  __ ____   (_)/ /_ __  __        / ____/____/ /(_)/ /_ (_)____   ____
  / / / //  |/ / / /   / /    /_ < / / / /______ / /    / __ \ / __ `__ \ / __ `__ \ / / / // __ \ / // __// / / /______ / __/  / __  // // __// // __ \ / __ \
 / /_/ // /|  /_/ /   / /   ___/ // /_/ //_____// /___ / /_/ // / / / / // / / / / // /_/ // / / // // /_ / /_/ //_____// /___ / /_/ // // /_ / // /_/ // / / /
 \____//_/ |_//___/  /_/   /____//_____/        \____/ \____//_/ /_/ /_//_/ /_/ /_/ \__,_//_/ /_//_/ \__/ \__, /       /_____/ \__,_//_/ \__//_/ \____//_/ /_/
                                                                                                         /____/

    *-----------------------------------------------*
    | Copyright:   2017-2026                        |
    | Founder:     HDVinnie                         |
    | Maintainers: HDVinnie, Roardom & Community    |
    | Installer:   Rust Edition v2.0                |
    *-----------------------------------------------*
