tests/snapshots/templates_test__meilisearch_unit_snapshot.snap
---
source: tests/templates_test.rs
assertion_line: 76
expression: "render(&MeilisearchUnitTemplate { web_user: \"www-data\", })"
---
[Unit]
Description=Meilisearch
After=network.target

[Service]
Type=simple
WorkingDirectory=/var/lib/meilisearch
ExecStart=/usr/local/bin/meilisearch --http-addr 127.0.0.1:7700 --config-file-path /etc/meilisearch.toml
User=www-data
Group=www-data
Restart=on-failure

[Install]
WantedBy=multi-user.target
