tests/snapshots/templates_test__my_cnf_snapshot.snap
---
source: tests/templates_test.rs
assertion_line: 83
expression: "render(&MyCnfTemplate { password: \"rootsecret\", })"
---
[client]
password=rootsecret
