tests/snapshots/templates_test__my_cnf_snapshot_empty_password.snap
---
source: tests/templates_test.rs
expression: "render(&MyCnfTemplate { password: \"\" })"
---
[client]
password=
